--- a/css/responsive.css
+++ b/css/responsive.css
@@ -962,9 +962,9 @@ vertical-align: top;
   padding: 0 20px;
 }
 /*-------------ページ読み込み時アニメーション----------------*/
-.fade-box {
+/* .fade-box {
   display: none;
-}
+} */
 /*-------------スクロールアニメーション----------------*/
 .inview {
   /* 30px下げる */
