--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ header {
   /*background-color: var(--blue2);*/
 }
 .sec_3_wrap {
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -583,14 +583,14 @@ header {
   padding: 100px 0 120px 0;
 }
 .sec_4_wrap {
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
 }
 .achievements_list_flex {
   display: flex;
 }
 .achievements_list {
-  width: 400px;
+  width: 450px;
   margin-top: 50px;
 }
 .achievements_list img {
@@ -601,6 +601,8 @@ header {
 }
 .achievements_list dt {
   border: solid 1px #000;
+  width: 300px;
+  height: 250px;
 }
 .achievements_list dd {
   margin: 10px;
@@ -613,7 +615,7 @@ header {
   /*background-color: var(--blue2);*/
 }
 .sec_5_wrap {
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
 }
 .blog_list_flex {
@@ -631,6 +633,8 @@ header {
 }
 .blog_list dt {
   border: solid 1px #000;
+  width: 300px;
+  height: 250px;
 }
 .blog_list dd {
   margin: 10px;
