--- a/css/style.css
+++ b/css/style.css
@@ -203,11 +203,95 @@ header {
   color: var(--blue1);
   opacity: 1;
 }
+
+@media screen and (max-width: 850px) {
+  .main_navigation {
+  display: none;
+}
+.nav_toggle{
+  display: block;
+}
+
+	.nav_toggle {
+  position: relative;
+  width: 1.75rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+.nav_toggle i {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  transition: transform .5s, opacity .5s;
+}
+.nav_toggle i:nth-child(1) {
+  top: 0;
+}
+.nav_toggle i:nth-child(2) {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+.nav_toggle i:nth-child(3) {
+  bottom: 0;
+}
+.nav_toggle.show i:nth-child(1) {
+  transform: translateY(10px) rotate(-45deg);
+}
+.nav_toggle.show i:nth-child(2) {
+  opacity: 0;
+}
+.nav_toggle.show i:nth-child(3) {
+  transform: translateY(-12px) rotate(45deg);
+}
+.nav {
+  width: 100%;
+  position: fixed;
+  top: 97px;
+  right: 0;
+  left: 0;
+  margin: auto;
+  bottom: 0;
+  padding: 1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s, visibility .5s;
+}
+.nav.show {
+  opacity: 1;
+  visibility: visible;
+}
+.nav_menu_li {
+  padding: 30px 0;
+  width: 100%;
+  background-color: var(--blue3);
+  display: block;
+  border-bottom: solid 1px #fff;
+  text-align: center;
+}
+.nav_menu_li:hover a {
+  opacity: 0.7;
+}
+.nav_menu_li a {
+  font-size: 1.3rem;
+  color: #fff;
+  font-weight: bold;
+}
+	
+	
+}
+
 /*-------------メインビジュアル----------------*/
 .mainvisual {
   width: 100%;
   padding: 90px 0 70px 0;
   position: relative;
+}
+
+.res_mainvisual{
+	display: none;
 }
 
 .main_bg {
@@ -343,7 +427,70 @@ header {
   }
 }*/
 
+/*-------------TOP会社について----------------*/
+.sec_3 {
+  width: 100%;
+  margin: 0 auto;
+  padding: 100px 0 60px 0;
+  /*background-color: var(--blue2);*/
+}
 
+.res_sec_3{
+	display: none;
+}
+.sec_3_wrap {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.title_sec3 {
+  margin-right: 50px;
+  margin-bottom: 50px;
+  min-width: 300px;
+}
+.sec_3_contents {
+  width: 100%;
+}
+.sec_3_content {
+  margin-bottom: 25px;
+}
+.sec_3_text {
+  width: 55%;
+}
+.sec_3_text h3 {
+  font-size: 1.7rem;
+  font-weight: normal;
+  margin-bottom: 10px;
+  color: var(--blue3);
+}
+.sec_3_text p {
+  line-height: 1.8em;
+  font-size: 1.2rem;
+}
+
+.missino_img{
+	width: 40%;
+	height: auto;
+	overflow: hidden;
+	margin-right: 25px;
+}
+
+.res_sec_3_h3{
+	display: none;
+}
+
+@media screen and (max-width: 1281px) {
+	.sec_3_h3{
+		display: none;
+	}
+	.res_sec_3_h3{
+	display: block;
+}
+	.sec_3_text p{
+		line-height: 1.4em;
+	}
+	
+  }
 
 /*-------------TOPサービス事業内容----------------*/
 .sec_2 {
@@ -429,33 +576,7 @@ header {
   left: 0;
   margin: auto;
 }
-.services_list_title {
-  width: 400px;
-  margin: 0 auto;
-  color: var(--blue3);
-  font-weight: bold;
-  padding: 15px;
-  text-align: center;
-  margin-top: 100px;
-  display: block;
-  font-size: 2rem;
-  line-height: 1em;
-  letter-spacing: 0.08em;
-  position: relative;
-}
-.services_list_title::before {
-  content: '';
-  position: absolute;
-  width: 300px;
-  border-bottom: solid var(--blue3) 3px;
-  top: -20px;
-  left: 0;
-  right: 0;
-  margin: auto;
-}
-.services_list_title span {
-  font-size: 1.5rem;
-}
+
 .services_list {
   width: 80%;
   margin: 0 auto;
@@ -463,7 +584,6 @@ header {
   grid-template-columns: 1fr 1fr;
   row-gap: 1em;
   flex-wrap: wrap;
-  margin: 0 auto;
   margin-top: 50px;
 }
 .services_list li {
@@ -521,61 +641,7 @@ header {
 .services_list_detail a:hover .arrow {
   left: 6px;
 }
-/*-------------TOPミッション会社情報----------------*/
-.sec_3 {
-  width: 100%;
-  margin: 0 auto;
-  padding: 100px 0 60px 0;
-  /*background-color: var(--blue2);*/
-}
-.sec_3_wrap {
-  width: 75%;
-  margin: 0 auto;
-}
 
-.title_sec3 {
-  margin-right: 50px;
-  margin-bottom: 50px;
-  min-width: 300px;
-}
-.sec_3_contents {
-  width: 100%;
-}
-.sec_3_content {
-  margin-bottom: 25px;
-}
-.sec_3_text {
-  width: 100%;
-}
-.sec_3_text h3 {
-  font-size: 1.7rem;
-  font-weight: normal;
-  margin-bottom: 10px;
-  color: var(--blue3);
-}
-.sec_3_text p {
-  line-height: 1.8em;
-  font-size: 1.2rem;
-}
-.sec_3_img {
-  width: 100%;
-  height: 250px;
-  /*border: solid var(--blue1) 1px;*/
-  /* background-image: ;
-	background-position: center;
-	background-repeat: no-repeat; */
-  margin-bottom: 10px;
-  position: relative;
-  overflow: hidden;
-}
-.sec_3_img img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-}
 /*-------------TOP実績ACHIEVEMENTS----------------*/
 .sec_4 {
   width: 100%;
@@ -639,6 +705,11 @@ header {
 .blog_list dd {
   margin: 10px;
 }
+
+.blog_btn{
+	display: none;
+}
+
 /*-------------TOPコンタクト----------------*/
 .contact {
   width: 100%;
@@ -874,16 +945,29 @@ footer small {
 .button-2:hover a {
   color: var(--blue3);
 }
-/*----------------------------------------------------------*/
+
+.res_sec_btn{
+	display: none;
+}
+
+.res_top_btn1,.res_top_btn2{
+	display: none;
+}
+
 /*--------------会社情報---------------*/
 /*--------------お問合せ---------------*/
-.conpany {
+.conpany,.contact_page {
   margin: 0 auto;
 }
 .company_wrap {
   width: 100%;
   padding: 70px 0 0 0;
 }
+
+.res_contact_wrap{
+	display: none;
+}
+
 .company_table_wrap {
   width: 85%;
   margin: 0 auto;
