--- a/css/responsive.css
+++ b/css/responsive.css
@@ -122,7 +122,7 @@ header {
   left: 0;
 }
 .nav, .nav_toggle {
-  display: none;
+  display: block;
 }
 /*-------------レスポンシブグローバルナビゲーション----------------*/
 .gnavi__list {
@@ -268,18 +268,19 @@ header {
 .nav_menu_li {
   padding: 30px 0;
   width: 100%;
-  background-color: var(--blue3);
+  background-color: var(--blue2);
+	
   display: block;
-  border-bottom: solid 1px #fff;
+  /*border-bottom: solid 1px var(--blue1);*/
   text-align: center;
 }
 .nav_menu_li:hover a {
   opacity: 0.7;
 }
 .nav_menu_li a {
-  font-size: 1.3rem;
-  color: #fff;
-  font-weight: bold;
+  font-size: 1.2rem;
+  color: var(--blue3);
+  font-weight: 700;
 }
 
 /*-------------レスポンシブメインビジュアル----------------*/
@@ -318,7 +319,7 @@ header {
   z-index: 5;
 }
 .mainvisual_title h1 {
-  font-size: 2.3rem;
+  font-size: 2.0rem;
   color: var(--gray);
   letter-spacing: 0.01em;
   margin-bottom: 20px;
@@ -343,6 +344,7 @@ header {
   margin-bottom: 20px;
   font-size: 1.0rem;
   margin-top: -10px;
+	width: 98%;
 }
 .mainvisual_text3 {
   position: relative;
@@ -361,7 +363,7 @@ header {
 }
 
 .res_top_btn1,.res_top_btn2{
-	width: 210px;
+	width: 350px;
 	padding: 15px;
 	text-align: center;
 	font-weight: 600;
@@ -389,7 +391,7 @@ header {
 	color: #fff;
 }
 
-/*-------------レスポンシブ企業ロゴスクロール----------------*/
+/*-------------レスポンシブTOP企業ロゴスクロール----------------*/
 .sec_1 {
   padding:0 0 50px 0;
 }
@@ -438,7 +440,7 @@ header {
 	display: block;
 	width: 100vw;
   margin: 0 auto;
-  padding: 50px 0 30px 0;
+  padding: 50px 0 50px 0;
   /*background-color: var(--blue2);*/
 }
 
@@ -448,8 +450,8 @@ header {
 }
 
 .title_sec3 {
+	margin: 0 auto;
   margin-bottom: 10px;
-  min-width: 300px;
 }
 .sec_3_contents {
   width: 100%;
@@ -510,6 +512,7 @@ header {
   display: block;
   position: relative;
   z-index: 0;
+
 }
 .sec_title_border {
   position: relative;
@@ -524,27 +527,24 @@ header {
   border: solid var(--blue3) 2px;
 }
 .title_bg_img {
-  position: absolute;
-  z-index: -1;
-  top: -40px;
-  left: -30px;
-  opacity: .2;
-  width: 300px;
-  height: auto;
+  display: none;
 }
 .sec_title p {
   font-weight: bold;
   line-height: 1.3em;
+	margin: 0 auto;
 }
 .sec_title_1 {
-  font-size: 2.5rem;
-  margin-right: 50px;
+  font-size: 3.7rem;
+  text-align: center;
   color: var(--blue3);
   letter-spacing: 0.08em;
+	
 }
 .sec_title_2 {
   font-size: 1.5rem;
   color: var(--blue3);
+	text-align: center;
 }
 .sec_title_4 {
   width: 85%;
@@ -577,9 +577,11 @@ header {
 }
 .services_list li {
   /*width: 600px;*/
+	margin: 0 auto;
   position: relative;
   overflow: hidden;
   height: auto;
+	margin-bottom: 30px;
 }
 .services_list li > img {
   position: absolute;
@@ -630,7 +632,7 @@ header {
 .sec_4 {
   width: 100vw;
   margin: 0 auto;
-  padding: 20px 0 80px 0;
+  padding: 30px 0 100px 0;
 }
 .sec_4_wrap {
   width: 85%;
@@ -661,7 +663,7 @@ header {
 .sec_5 {
   width: 100vw;
   margin: 0 auto;
-  padding: 0 0 70px 0;
+  padding: 0 0 100px 0;
   /*background-color: var(--blue2);*/
 }
 .sec_5_wrap {
@@ -780,6 +782,8 @@ footer small {
   color: gray;
 }
 /*-------------レスポンシブボタン----------------*/
+
+
 .button-4 {
   width: 250px;
   height: 70px;
@@ -909,20 +913,79 @@ footer small {
 
 .res_top_btn1,.res_top_btn2{
 	display: block;
+	margin: 0 auto;
+}
+
+.res_top_btn1{
+	margin-bottom: 10px;
+}
+
+.res_btn_wrap{
+	width: 100%;
+	margin: 0 auto;
 }
 /*--------------会社情報---------------*/
 /*--------------お問合せ---------------*/
 
-.contact_page>.company_wrap{
+.contact_page>.company_wrap,.company_wrap{
 	display: none;
 }
 
-.res_contact_wrap{
+.res_contact_wrap,.res_company_wrap{
 	display: block;
+	width: 92%;
+	margin: 0 auto;
+	margin-top: 30px;
+}
+
+.res_contact_wrap textarea{
+	width: 100%;
 }
 
 .res_contact-form{
 	display: block;
+}
+
+.res_contact-form li{
+	
+}
+
+.contact_margin{
+	height: 20px;
+}
+
+.res_contact_form {
+  display: none;
+}
+
+.res_form_txt{
+	height: 50px;
+	width: 100%;
+}
+
+.res_contact_wrap p{
+	display: inline-block;
+	font-size: 1.2rem;
+	font-weight: 500;
+}
+
+.res_company_table{
+	border: 1px solid #fff;
+}
+
+.res_company_table dt,.res_company_table dd{
+	border-bottom: 1px solid #fff;
+	padding: 20px
+}
+
+.res_company_table dd:last-child{
+	border-bottom: none;
+}
+
+.res_company_table dt{
+	background: var(--blue3);
+	color: #fff;
+	font-weight: 600;
 }
 
 .conpany {
@@ -1013,8 +1076,8 @@ footer small {
   border-left: none;
 }
 .form_btn {
-  width: 200px;
-  padding: 20px;
+  width: 190px;
+  padding: 10px;
   border: none;
   background: var(--blue3);
   color: #fff;
@@ -1024,6 +1087,20 @@ footer small {
   font-weight: bold;
   cursor: pointer;
 }
+
+.form_btn_2{
+	width: 350px;
+  padding: 10px;
+  border: none;
+  background: var(--blue3);
+  color: #fff;
+  margin: 40px auto;
+  display: block;
+  font-size: 1.0em;
+  font-weight: 700;
+  cursor: pointer;
+}
+
 .required {
   font-size: 0.8em;
   display: inline-block;
@@ -1037,7 +1114,7 @@ footer small {
 .btn-check {
   text-align: center;
   margin-top: 25px;
-  font-size: 1.0em;
+  font-size: 0.8em;
 }
 .inquiry input {}
 textarea, .contact-form input[type='text'], .contact-form input[type='email'], .contact-form input[type='tel'] {
@@ -1045,23 +1122,21 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   width: 400px;
   border: 1;
 }
-.res_contact_form {
-  display: none;
-}
+
 /*-------------ダウンロードページ----------------*/
 .download_wrap {
   padding: 70px 0;
 }
-.download_img {
+.res_download_img {
   margin: 0 auto;
   display: block;
-  width: 600px;
-  height: 300px;
+  width: 350px;
+  height: 250px;
   border: solid #000 1px;
   position: relative;
   margin-bottom: 50px;
 }
-.download_img img {
+.res_download_img img {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -1069,23 +1144,28 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   right: 0;
   margin: auto;
 }
-/*-------------メンバー紹介----------------*/
+/*-------------レスポンシブメンバー紹介----------------*/
 .member_wrap {
-  width: 85%;
-  margin: 0 auto;
-  padding-bottom: 150px;
+  display: none;
 }
+
+.res_member_wrap{
+	display: block;
+	width: 90%;
+	margin: 0 auto;
+}
+
 .ceo_text h2 {
   font-size: 2.0rem;
 }
 .ceo {
-  margin-bottom: 70px;
+  text-align: center;
 }
 .ceo_img {
-  margin-right: 50px;
-  width: 700px;
+  width: 300px;
   height: auto;
   border: solid 1px #000;
+	margin: 0 auto;
 }
 .ceo_post {
   font-size: 1.0rem;
