--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ a:hover {
 .tac {
   text-align: center;
 }
+
+.m0a{
+	margin: 0 auto;
+}
+
 /*-------------ヘッダー----------------*/
 header {
   width: 100vw;
@@ -208,7 +213,7 @@ header {
   .main_navigation {
   display: none;
 }
-.nav_toggle{
+.nav_toggle,.nav{
   display: block;
 }
 
@@ -384,7 +389,7 @@ header {
 .loop_wrap {
   display: flex;
   width: 100%;
-  height: 90px;
+  height: 80px;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -520,6 +525,7 @@ header {
   border: solid var(--blue3) 2px;
 }
 .title_bg_img {
+	display: none;
   position: absolute;
   z-index: -1;
   top: -40px;
@@ -533,7 +539,7 @@ header {
   line-height: 1.3em;
 }
 .sec_title_1 {
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   margin-right: 50px;
   color: var(--blue3);
   letter-spacing: 0.08em;
@@ -917,7 +923,6 @@ footer small {
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
-  margin: 0 auto;
   margin-top: 30px;
 }
 .button-2 a {
@@ -964,7 +969,7 @@ footer small {
   padding: 70px 0 0 0;
 }
 
-.res_contact_wrap{
+.res_contact_wrap,.res_company_wrap{
 	display: none;
 }
 
@@ -972,6 +977,12 @@ footer small {
   width: 85%;
   margin: 0 auto;
 }
+
+.contact_wrap{
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
 .page_title_wrap {
   width: 100%;
   background-color: var(--blue2);
@@ -1023,7 +1034,7 @@ footer small {
 }
 .company_table {
   margin-top: 30px;
-  border: 1px solid var(--gray);
+  border: 1px solid #fff;
 }
 .company_table tr, .contact-form tr {
   width: 70px;
@@ -1048,10 +1059,10 @@ footer small {
   border-bottom: #fff solid 1px;
 }
 .company_table th:last-of-type {
-  border-bottom: var(--gray) solid 1px;
+  border-bottom: #fff solid 1px;
 }
 .company_table td {
-  border: solid 1px var(--gray);
+  border: solid 1px #fff;
   box-sizing: border-box;
   border-left: none;
 }
@@ -1091,6 +1102,14 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 .res_contact_form {
   display: none;
 }
+
+.form_txt{
+	height: 50px;
+	/*background: var(--blue2);
+	border: var(--gray) 0.5px solid;
+	border-radius: 5px;*/
+}
+
 /*-------------ダウンロードページ----------------*/
 .download_wrap {
   padding: 70px 0;
@@ -1099,10 +1118,10 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   margin: 0 auto;
   display: block;
   width: 600px;
-  height: 300px;
+  height: 350px;
   border: solid #000 1px;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 .download_img img {
   position: absolute;
@@ -1112,12 +1131,21 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   right: 0;
   margin: auto;
 }
+
+.dl{
+	
+}
 /*-------------メンバー紹介----------------*/
 .member_wrap {
-  width: 85%;
+  width: 70%;
   margin: 0 auto;
   padding-bottom: 150px;
 }
+
+.res_member_wrap{
+	display: none;
+}
+
 .ceo_text h2 {
   font-size: 2.0rem;
 }
@@ -1146,13 +1174,15 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 }
 /*-------------ブログ一覧----------------*/
 .blog_wrap {
-  width: 85%;
+  width: 90%;
   margin: 0 auto;
   margin: 70px auto;
 }
 .product-list {
+	width: 100%;
   display: flex;
   flex-wrap: wrap;
+	margin: 0 auto;
 }
 .product-list li {
   width: 300px;
