--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ a:hover {
 }
 
 /*-------------ヘッダー----------------*/
+
+
+
 header {
   width: 100vw;
   height: 97px;
@@ -284,7 +287,20 @@ header {
   color: #fff;
   font-weight: bold;
 }
-	
+.nav_bg{
+  width: 100vw;
+  height: 100vw;
+  background-color: #fff;
+  z-index: 15;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s, visibility .5s;
+  position: fixed;
+}
+.nav_bg.show {
+  opacity: 0.7;
+  visibility: visible;
+}	
 	
 }
 
@@ -661,6 +677,7 @@ header {
 .achievements_list_flex {
   display: flex;
 }
+
 .achievements_list {
   width: 450px;
   margin-top: 50px;
@@ -691,6 +708,7 @@ header {
   margin: 0 auto;
 }
 .blog_list_flex {
+  display: block;
   display: flex;
 }
 .blog_list {
@@ -714,6 +732,11 @@ header {
 
 .blog_btn{
 	display: none;
+}
+/*-------------スライダー----------------*/
+
+.slider-wrapper{
+  display: none;
 }
 
 /*-------------TOPコンタクト----------------*/
