--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,13 +64,16 @@ a:hover {
   text-align: center;
 }
 /*-------------レスポンシブヘッダー----------------*/
+
+
+
 header {
   width: 100vw;
   height: 90px;
   display: block;
   position: fixed;
   background: #fff;
-  z-index: 20;
+  z-index: 30;
   box-shadow: 2px 2px 5px 2px rgba(97, 97, 156, 0.18);
   margin: 0 auto;
 }
@@ -124,6 +127,22 @@ header {
 .nav, .nav_toggle {
   display: block;
 }
+
+.nav_bg{
+  width: 100vw;
+  height: 100vw;
+  background-color: #fff;
+  z-index: 25;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s, visibility .5s;
+  position: fixed;
+}
+.nav_bg.show {
+  opacity: 0.7;
+  visibility: visible;
+}	
+
 /*-------------レスポンシブグローバルナビゲーション----------------*/
 .gnavi__list {
   position: relative;
@@ -268,7 +287,7 @@ header {
 .nav_menu_li {
   padding: 30px 0;
   width: 100%;
-  background-color: var(--blue2);
+  background-color: var(--blue3);
 	
   display: block;
   /*border-bottom: solid 1px var(--blue1);*/
@@ -279,7 +298,7 @@ header {
 }
 .nav_menu_li a {
   font-size: 1.2rem;
-  color: var(--blue3);
+  color: #fff;
   font-weight: 700;
 }
 
@@ -639,7 +658,7 @@ header {
   margin: 0 auto;
 }
 .achievements_list_flex {
-  display: flex;
+  display: none;
 }
 .achievements_list {
   width: 450px;
@@ -671,8 +690,10 @@ header {
   margin: 0 auto;
 }
 .blog_list_flex {
-  display: flex;
+  display: none;
+
 }
+
 .blog_list {
   width: 400px;
   margin-top: 50px;
@@ -696,6 +717,19 @@ header {
 	display: block;
 }
 
+/*-------------スライダー----------------*/
+
+.slider-wrapper {
+  background: #EEE;
+  display: block;
+}
+
+.slider-cell {
+  width: 90%;
+  height: 200px;
+  background: #8C8;
+  margin: 0 5px;
+}
 /*-------------レスポンシブTOPコンタクト----------------*/
 .contact {
   width: 100vw;
